--- a/source/assets/stylus/partials/critical_and_global/base/typography.styl
+++ b/source/assets/stylus/partials/critical_and_global/base/typography.styl
@@ -9,8 +9,8 @@
         $properties: "font-size",
         $min-screen: 480px,
         $max-screen: 1680px,
-        $min-value: 13px,
-        $max-value: 19px
+        $min-value: 16px,
+        $max-value: 26px
     )
     // @stylint on
 
@@ -122,8 +122,7 @@ strong
 */
 i
 em
-    font-style normal
-    font-family $ff--emphasis
+    font-style italic
 
 /*
     specify styles for superscript and subscript text.
