--- a/source/assets/stylus/partials/critical_and_global/functions/layout_functions.styl
+++ b/source/assets/stylus/partials/critical_and_global/functions/layout_functions.styl
@@ -207,3 +207,13 @@ flex-grid(
         &:last-child
             +above($change-to-two)
                 margin-right auto
+
+/*
+    Function to apply a grainy gradient background.
+*/
+background-grain($frequency = .6, $octaves = 2)
+    url("data:image/svg+xml, %3Csvg viewBox='0 0 200 200' xmlns='http://www.w3.org/2000/svg'%3E%3Cfilter id='noiseFilter'%3E%3CfeTurbulence type='fractalNoise' baseFrequency='" + $frequency + "' numOctaves='" + $octaves + "' stitchTiles='stitch'/%3E%3C/filter%3E%3Crect width='100%25' height='100%25' filter='url(%23noiseFilter)'/%3E%3C/svg%3E")
+
+w-full()
+    width 100%
+    max-width 100%
