--- a/source/assets/stylus/partials/critical_and_global/variables/colour_variables.styl
+++ b/source/assets/stylus/partials/critical_and_global/variables/colour_variables.styl
@@ -13,13 +13,13 @@ $cl--water-town            = hsla(222.1, 39%, 56.3%, 1)
 $cl--interface--high  = hsla(180, 29.4%, 96.7%, 1);
 $cl--interface--light = hsla(180, 20%, 92.2%, 1)
 $cl--interface        = hsla(180, 10.5%, 70.2%, 1)
-$cl--interface--dark  = hsla(180, 10%, 24%, 1)
-$cl--interface--low   = hsla(180, 06%, 10%, 1)
+$cl--interface--dark  = hsla(208.4, 68.9%, 26.5%, 1)
+$cl--interface--low   = hsla(230, 40%, 17.6%, 1)
 
 /*
     attention colours, to draw the user's attention to an element.
 */
-$cl--attention = $cl--tupelo-honey
+$cl--attention = hsla(35.6, 81%, 60.8%, 1)
 
 /*
     action colours, to show the user they can interact with an element.
@@ -32,14 +32,14 @@ $cl--action--interact = modify-hsla($color: $cl--action, $s: 10, $l: -10)
     it often works well to use the same hue as the interface colour values.
 */
 $cl--text--metadata = hsla(180, 8%, 45%, 1)
-$cl--text--copy     = hsla(180, 14.3%, 26%, 1)
-$cl--text--heading  = hsla(180, 22.8%, 13%, 1)
+$cl--text--copy     = hsla(60, 37.5%, 81.2%, 1)
+$cl--text--heading  = hsla(60, 37.5%, 81.2%, 1)
 
 /*
     anchor colours.
 */
-$cl--anchor           = $cl--illuminating-emerald
-$cl--anchor--interact = modify-hsla($color: $cl--anchor, $s: 10, $l: -10)
+$cl--anchor           = hsl(34.5, 90.5%, 62.7%)
+$cl--anchor--interact = hsl(34.5, 100%, 52.7%)
 
 /*
     utility colours.
