--- a/source/assets/stylus/partials/critical_and_global/base/layout.styl
+++ b/source/assets/stylus/partials/critical_and_global/base/layout.styl
@@ -30,6 +30,7 @@ body
     justify-content flex-start
     min-height 100vh
     width 100%
+    background-image linear-gradient(to right top, $cl--interface--low, $cl--interface--low), background-grain($frequency: 1)
 
     /*
         hide scrollbars when modal is visible.
