--- a/source/assets/stylus/partials/critical_and_global/variables/typographic_variables.styl
+++ b/source/assets/stylus/partials/critical_and_global/variables/typographic_variables.styl
@@ -1,9 +1,9 @@
 // font family variables.
-$ff--light    = "inter-ui--regular", sans-serif
-$ff--body     = "inter-ui--regular", sans-serif
-$ff--emphasis = "inter-ui--italic", sans-serif
-$ff--strong   = "inter-ui--medium", sans-serif
-$ff--heading  = "inter-ui--medium", sans-serif
+$ff--light    = "Crimson Text", serif
+$ff--body     = "Crimson Text", serif
+$ff--emphasis = "Crimson Text", serif
+$ff--strong   = "Crimson Text", serif
+$ff--heading  = "Crimson Text", serif
 
 /*
     add an em value to account for some font families displaying
@@ -26,9 +26,9 @@ $ratio--lrg = 1.28
 $ratio--med = ((($ratio--lrg - $ratio--sml) / 2) + $ratio--sml) // the middle point between $ratio--lrg and $ratio--sml
 
 // font-weight variables.
-$fw--normal  = normal
-$fw--strong  = normal
-$fw--heading = normal
+$fw--normal  = 400
+$fw--strong  = 600
+$fw--heading = 600
 
 // line height variables.
 $lh--body    = 1.618
